# call

./: Cargo.toml  Dockerfile  Dockerfile.base  config.env  entrypoint.sh
src/: conf.rs  main.rs  prelude.rs
src/cmd/: mod.rs
src/pkg/: mod.rs
src/pkg/adaptors/: mod.rs
src/pkg/brokers/: inmemory.rs  mod.rs  nats.rs
src/pkg/db/: mod.rs  models.rs
src/pkg/db/adaptors/: mutators.rs
src/pkg/db/migrations/: init.sql
src/pkg/server/: mod.rs  serve.rs
src/pkg/server/handlers/: mod.rs  probes.rs  ui.rs  ws.rs
src/pkg/stream/: mod.rs  recv.rs  send.rs
src/pkg/stream/brokers/: inmemory.rs  mod.rs  nats.rs
templates/: index.html
