[package]
name = "call"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["ws"] }
clap = { version = "4.5.26", features = ["derive"] }
config = "0.15.6"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
